Replace PreferenceManager with getApplicationContext Init file to support Managed Configuration Clean code by removing not used use_menu_bar